objects/FieloEE__PreviewSettings__c.object
<CustomObject>
    <fields>
        <fullName>FieloEE__Height__c</fullName>
        <defaultValue>&apos;800&apos;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>es</fullName>
                    <label>EspaÃ±ol</label>
                </value>
                <value>
                    <fullName>en</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>fr</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>pt</fullName>
                    <label>Portuguese</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FieloEE__Member__c.FieloEE__Program__c</field>
                <operation>equals</operation>
                <valueField>$Source.FieloEE__Program__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__Member__c</referenceTo>
        <relationshipLabel>Preview Settings</relationshipLabel>
        <relationshipName>Preview_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wireframe</fullName>
                    <default>true</default>
                    <label>Wireframe</label>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Overlay__c</fullName>
        <label>Overlay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hover</fullName>
                    <default>true</default>
                    <label>Hover</label>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Disabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Preview Settings</relationshipLabel>
        <relationshipName>Preview_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__Segments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Segments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preview_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Preview Settings</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Preview Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preview Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>